--- a/CryptocurrenciesCollector/MainWindow.xaml
+++ b/CryptocurrenciesCollector/MainWindow.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button Content="Load Assets" 
+                Command="{Binding GetCryptocurrencyByIdCommand}" Width="150" Height="50" Grid.Column="0" Grid.Row="0">
+        </Button>
+        <ComboBox ItemsSource="{Binding Cryptocurrencies}"
+                  SelectedItem="{Binding CryptocurrencyId}"
+                  HorizontalAlignment="Left" Margin="100,100,0,0" VerticalAlignment="Top" Width="120">
+        </ComboBox>
 
     </Grid>
 </Window>
