--- a/CryptocurrenciesCollector/MainWindow.xaml
+++ b/CryptocurrenciesCollector/MainWindow.xaml
@@ -5,15 +5,87 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CryptocurrenciesCollector"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Loaded="Window_Loaded">
+    <!--<Frame Name="MainFrame" Background="White" NavigationUIVisibility="Hidden"/>-->
     <Grid>
-        <Button Content="Load Assets" 
-                Command="{Binding GetCryptocurrencyByIdCommand}" Width="150" Height="50" Grid.Column="0" Grid.Row="0">
-        </Button>
-        <ComboBox ItemsSource="{Binding Cryptocurrencies}"
-                  SelectedItem="{Binding SelectedCryptocurrencyId}"
-                  HorizontalAlignment="Left" Margin="100,100,0,0" VerticalAlignment="Top" Width="120">
-        </ComboBox>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <ListView ItemsSource="{Binding TopCryptocurrencies}"
+                  HorizontalAlignment="Center" VerticalAlignment="Top"
+                  Margin="0 15 0 0"
+                  Grid.Row="1" Grid.Column="0"
+                  MaxHeight="200">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Rank" DisplayMemberBinding="{Binding Rank}" Width="150"/>
+                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="100"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <Grid HorizontalAlignment="Center" VerticalAlignment="Top"
+                  Margin="15 15 0 0" Grid.Row="0" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="Name" Grid.Column="0" Grid.Row="0" FontWeight="Bold"/>
+            <TextBlock Text="Price (USD)" Grid.Column="1" Grid.Row="0" FontWeight="Bold"/>
+            <TextBlock Text="Volume (24Hr)" Grid.Column="2" Grid.Row="0" FontWeight="Bold"/>
+            <TextBlock Text="Change (24Hr %)" Grid.Column="3" Grid.Row="0" FontWeight="Bold"/>
+
+            <TextBlock Text="{Binding CryptocurrencyInfo.Name}" Grid.Column="0" Grid.Row="1"/>
+            <TextBlock Text="{Binding CryptocurrencyInfo.PriceUsd}" Grid.Column="1" Grid.Row="1"/>
+            <TextBlock Text="{Binding CryptocurrencyInfo.VolumeUsd24Hr}" Grid.Column="2" Grid.Row="1"/>
+            <TextBlock Text="{Binding CryptocurrencyInfo.ChangePercent24Hr}" Grid.Column="3" Grid.Row="1"/>
+        </Grid>
+
+        <ListView ItemsSource="{Binding CryptocurrencyInfo.Markets}"
+                  HorizontalAlignment="Right" VerticalAlignment="Center"
+                  Margin="0 0 15 15"
+                  Grid.Row="1" Grid.Column="1"
+                  MaxHeight="200">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Markets" DisplayMemberBinding="{Binding ExchangeId}" Width="75"/>
+                    <GridViewColumn Header="MarketPrice" DisplayMemberBinding="{Binding PriceUsd}" Width="75"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <ComboBox ItemsSource="{Binding Cryptocurrencies}"
+                SelectedItem="{Binding SelectedCryptocurrencyId}"
+                HorizontalAlignment="Right" VerticalAlignment="Top" Width="120"
+                Margin="0,80,50,0"
+                Grid.Row="0" Grid.Column="0"/>
+
+
+        <Button Content="Load Assets" 
+                Command="{Binding GetCryptocurrencyByIdCommand}" Width="75" Height="25"
+                HorizontalAlignment="Right" VerticalAlignment="Top"
+                Margin="0,50,50,0"
+                Grid.Row="0" Grid.Column="0"/>
     </Grid>
+
+
+
+
+
 </Window>
