created and used styles for RadioButton and TextBox, added the ability to search for cryptocurrency by name

--- a/CryptocurrenciesCollector/App.xaml
+++ b/CryptocurrenciesCollector/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:CryptocurrenciesCollector"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/TextboxTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
