--- a/CryptocurrenciesCollector/Pages/SearchPage.xaml
+++ b/CryptocurrenciesCollector/Pages/SearchPage.xaml
@@ -3,12 +3,28 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CryptocurrenciesCollector.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SearchPage">
 
-    <Grid Background="White">
-        
+    <Grid >
+        <TextBlock Text="Results"
+                   HorizontalAlignment="Center" VerticalAlignment="Top"
+                   Margin="0 0 0 0"
+                   Grid.Row="0" Grid.Column="0" 
+                   FontSize="18" Foreground="White" FontWeight="Bold" FontFamily="Comic Sans MS"/>
+        <ListView ItemsSource="{Binding SearchedCryptocurrencies}"
+                  HorizontalAlignment="Center" VerticalAlignment="Top"
+                  Margin="0 35 0 15"
+                  SelectedItem="{Binding SelectedSearchCryptocurrency, Mode=TwoWay}">
+        <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="100"/>
+                    <GridViewColumn Header="Price (USD)" DisplayMemberBinding="{Binding PriceUsd}" Width="150"/>
+                    <GridViewColumn Header="Change (24Hr%)" DisplayMemberBinding="{Binding ChangePercent24Hr}" Width="100"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
     </Grid>
 </Page>
