--- a/CryptocurrenciesCollector/Pages/DetailInformationPage.xaml
+++ b/CryptocurrenciesCollector/Pages/DetailInformationPage.xaml
@@ -7,6 +7,10 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DetailInformationPage">
 
+    <Page.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Page.Resources>
+
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -43,7 +47,27 @@
                 <TextBlock Text="{Binding CryptocurrencyInfo.ChangePercent24Hr}" Foreground="White" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"/>
             </Grid>
 
+            <TextBlock Text="No markets available" 
+                       Foreground="Red" 
+                       HorizontalAlignment="Left" 
+                       VerticalAlignment="Top"
+                       Grid.Row="1" >
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding HasMarkets}" Value="False">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+
+            </TextBlock>
+
             <ListView ItemsSource="{Binding CryptocurrencyInfo.Markets}"
+                      Visibility="{Binding HasMarkets, 
+                                   Converter={StaticResource BooleanToVisibilityConverter}}"
                       HorizontalAlignment="Left" VerticalAlignment="Top"
                       Margin="0 10 0 0"
                       Grid.Row="1">
