added a helper project to add functionality to the textbox - to handle the OnPreviewTextInput property; added check of number of assets received from API; created a prototype of the settings page

--- a/CryptocurrenciesCollector/App.xaml
+++ b/CryptocurrenciesCollector/App.xaml
@@ -8,8 +8,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/TextboxTheme.xaml"/>
+                <ResourceDictionary Source="Theme/SettingsMenuButtonTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-
     </Application.Resources>
 </Application>
