--- a/CryptocurrenciesCollector/MainWindow.xaml
+++ b/CryptocurrenciesCollector/MainWindow.xaml
@@ -10,10 +10,10 @@
         Title="MainWindow" 
         ResizeMode="NoResize"
         Height="600" Width="920"
-        Background="Transparent"
-        WindowStyle="None"
-        AllowsTransparency="True">
+        Background="Transparent">
 
+    
+    
     <Border Background="#272537"
             CornerRadius="30">
         <Grid>
@@ -36,6 +36,7 @@
 
             <StackPanel Grid.Row="1">
                 <RadioButton Content="Home" 
+                             IsChecked="True"
                              Height="50"
                              Foreground="White"
                              FontSize="14"
@@ -63,12 +64,19 @@
                              Command="{Binding NavigateToCommand}"
                              CommandParameter="{x:Static enums:NavigationPage.Convert}"
                              Style="{StaticResource MenuButtonTheme}"/>
+                <RadioButton Content="Settings" 
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                             Command="{Binding NavigateToCommand}"
+                             CommandParameter="{x:Static enums:NavigationPage.Settings}"
+                             Style="{StaticResource MenuButtonTheme}"/>
             </StackPanel>
 
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
                 <TextBox Text="{Binding SearchText}"
@@ -81,15 +89,16 @@
                 <Button Content="🔍" 
                         Width="40" 
                         Height="40" 
-                        VerticalAlignment="Top"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Left"
                         Grid.Column="1" 
                         Command="{Binding GetSearchedCryptocurrenciesCommand}"/>
-
             </Grid>
 
             <Grid Grid.Row="1" Grid.Column="1"
                   Margin="10">
-                <Frame x:Name="BaseFrame" />
+                <Frame x:Name="BaseFrame"
+                       NavigationUIVisibility="Hidden"/>
             </Grid>
 
             <i:Interaction.Triggers>
