--- a/CryptocurrenciesCollector/Pages/ConvertPage.xaml
+++ b/CryptocurrenciesCollector/Pages/ConvertPage.xaml
@@ -5,48 +5,115 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:local="clr-namespace:CryptocurrenciesCollector.Pages"
+      xmlns:helpers="clr-namespace:CryptocurrenciesCollector.Helpers.Behaviors;assembly=CryptocurrenciesCollector.Helpers"
+      
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ConvertPage">
 
     <Grid>
-        <TextBox x:Name="InputAmount" 
-                 Text="{Binding InputAmount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                 HorizontalAlignment="Left" 
-                 VerticalAlignment="Top" 
-                 Width="120" 
-                 Height="30"
-                 PreviewTextInput="NumberValidationTextBox"/>
+        <StackPanel Orientation="Vertical">
+            <TextBox x:Name="InputAmount" 
+                       Grid.Row="0"
+                       Grid.Column="0"
+                       Text="{Binding InputAmount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       HorizontalAlignment="Left" 
+                       VerticalAlignment="Top" 
+                       Height="30"
+                       Width="120">
 
-        <ComboBox x:Name="FromCurrencyComboBox" 
-                  ItemsSource="{Binding Cryptocurrencies}"
-                  DisplayMemberPath="Id"
-                  SelectedItem="{Binding ConvertFromCryptocurrency}" 
-                  HorizontalAlignment="Left" 
-                  VerticalAlignment="Top" 
-                  Width="120" 
-                  Height="30"
-                  Margin="130 0 0 0"/>
+                <i:Interaction.Behaviors>
+                    <helpers:ExchangeTextBoxValidationBehavior/>
+                </i:Interaction.Behaviors>
+            </TextBox>
+
+            <StackPanel Orientation="Horizontal" 
+                        Margin="0 10 0 0">
+                <ComboBox x:Name="FromCurrencyComboBox" 
+                            ItemsSource="{Binding Cryptocurrencies}"
+                            DisplayMemberPath="Id"
+                            SelectedItem="{Binding ConvertFromCryptocurrency}" 
+                            HorizontalAlignment="Left" 
+                            VerticalAlignment="Top" 
+                            IsEditable="True"
+                            IsTextSearchEnabled="True"
+                            Width="120" 
+                            Height="30"/>
+                <ComboBox x:Name="ToCurrencyComboBox" 
+                            ItemsSource="{Binding Cryptocurrencies}"
+                            DisplayMemberPath="Id"
+                            SelectedItem="{Binding ConvertToCryptocurrency}"
+                            HorizontalAlignment="Left" 
+                            VerticalAlignment="Top" 
+                            Width="120" 
+                            Height="30"
+                            Margin="10,0,0,0"/>
+            </StackPanel>
 
 
-        <TextBox x:Name="OutputAmount" 
-                 Text="{Binding OutputAmount, Mode=TwoWay}"
-                 HorizontalAlignment="Left" 
-                 VerticalAlignment="Top" 
-                 Width="120" 
-                 Height="30"
-                 Margin="300 0 0 0"
-                 PreviewTextInput="NumberValidationTextBox"/>
+            <TextBlock Text="Такой криптовалюты нет" 
+                   Foreground="Red"
+                   FontWeight="Bold" 
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Top" 
+                   Margin="0 10 0 0">
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsCurrencyConvertAvailable}" Value="False">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
 
-        <ComboBox x:Name="ToCurrencyComboBox" 
-                  ItemsSource="{Binding Cryptocurrencies}"
-                  DisplayMemberPath="Id"
-                  SelectedItem="{Binding ConvertToCryptocurrency}"
-                  HorizontalAlignment="Left" 
-                  VerticalAlignment="Top" 
-                  Width="120" 
-                  Height="30"
-                  Margin="430,0,0,0"/>
+
+            <StackPanel Orientation="Horizontal" 
+                        Margin="0 10 0 0">
+                <StackPanel.Style>
+                    <Style TargetType="StackPanel">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsCurrencyConvertAvailable}" Value="True">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </StackPanel.Style>
+                <TextBlock FontSize="18" 
+                           Foreground="White" 
+                           FontWeight="Bold" 
+                           FontFamily="Comic Sans MS"
+                           Text="{Binding InputAmount, Mode=TwoWay}"/>
+                <TextBlock FontSize="18" 
+                           Foreground="White" 
+                           FontWeight="Bold" 
+                           FontFamily="Comic Sans MS"
+                           Margin="10 0 0 0"
+                           Text="{Binding ConvertFromCryptocurrency.Id}"/>
+                <TextBlock FontSize="18" 
+                           Foreground="White" 
+                           FontWeight="Bold" 
+                           FontFamily="Comic Sans MS"
+                           Margin="20 0"
+                           Text="="/>
+                <TextBlock FontSize="18" 
+                           Foreground="White" 
+                           FontWeight="Bold" 
+                           FontFamily="Comic Sans MS"
+                           Text="{Binding OutputAmount, Mode=TwoWay}"/>
+                <TextBlock FontSize="18" 
+                           Foreground="White" 
+                           FontWeight="Bold" 
+                           FontFamily="Comic Sans MS"
+                           Margin="10 0 0 0"
+                           Text="{Binding ConvertToCryptocurrency.Id}"/>
+            </StackPanel>
+            
+        </StackPanel>
+        
     </Grid>
 
     <i:Interaction.Triggers>
